[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://textures/player_anims/player_crouch.png" type="Texture" id=2]
[ext_resource path="res://textures/player_anims/player_idle1.png" type="Texture" id=3]
[ext_resource path="res://textures/player_anims/player_idle2.png" type="Texture" id=4]
[ext_resource path="res://textures/player_anims/player_idle3.png" type="Texture" id=5]
[ext_resource path="res://textures/player_anims/player_idle4.png" type="Texture" id=6]
[ext_resource path="res://textures/player_anims/player_idle5.png" type="Texture" id=7]
[ext_resource path="res://textures/player_anims/player_idle6.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 32 )

[sub_resource type="StreamTexture" id=4]

flags = 4
load_path = "res://.import/player_idle.jpg-8060adf1ac83e315cf9b73fd7b9c54ac.stex"

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 16, 32 )

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
jump_speed = -300
gravity = 500
run_speed = 165
walk_speed = 100
facing = 1

[node name="AttackArea" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AttackTimer" type="Timer" parent="AttackArea" index="1"]

process_mode = 1
wait_time = 0.12
one_shot = false
autostart = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 33, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="StunIdleTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="timeout" from="AttackArea/AttackTimer" to="." method="_on_AttackTimer_timeout"]


